# qproj

./: .env  .env.ssh  .env.wsl  .envrc  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  header.txt  justfile  pyproject.toml  requirements.txt  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.cargo-husky/hooks/: pre-push
.config/: config.toml  env.sh  mise.ssh.toml  mise.toml  nextest.toml
.github/workflows/: ci.yaml  ci.yml  codecov.yml  pr.yaml
.zed/: debug.json  settings.json
assets/scenes/: Untitled.scn.ron  Untitled.scn.scn.ron  test.scn
assets/terrain/: complex-planet.terrain.ron
bins/app/: Cargo.toml
bins/app/src/: lib.rs  main.rs
bins/game/: Cargo.toml
bins/game/src/: inspector.rs
bins/inspector/: Cargo.toml
bins/inspector/src/: lib.rs  main.rs  service.rs
bins/inspector/src/gizmos/: player_cam.rs
bins/inspector/src/inspector_cam/: mod.rs
bins/inspector/src/scene/: mod.rs  serialize.rs
bins/inspector/src/scene/gizmos/: axes.rs  mod.rs  player_cam.rs
bins/inspector/src/scene/inspector_cam/: bundle.rs  cam.rs  mod.rs
bins/inspector/src/state/: inspector_state.rs  mod.rs  ui_state.rs
bins/inspector/src/tabs/: assets.rs  game_view.rs  hierarchy.rs  mod.rs
bins/inspector/src/ui/: file_dialog.rs  layout.rs  mod.rs  plugin.rs
bins/inspector/src/ui/layout/: mod.rs  top_bar.rs
bins/inspector/src/ui/layout/dock/: data.rs  mod.rs  plugin.rs  render.rs
bins/inspector/src/ui/layout/dock/tabs/: assets.rs  hierarchy.rs  inspector.rs  mod.rs  resources.rs  scene_editor.rs
bins/inspector/src/ui/modals/: file_dialog.rs  mod.rs  toast.rs
bins/inspector/src/ui/tabs/: assets.rs  hierarchy.rs  inspector.rs  mod.rs  resources.rs  scene_editor.rs
bins/inspector/src/widgets/: toast.rs
bins/inspector/tests/: scene_loading.rs
bins/tests/: Cargo.toml  README.md
bins/tests/assets/scenes/: test1.scn
bins/tests/src/: lib.rs  main.rs  worldgen.rs
bins/tests/src/inspector/: mod.rs  scene_loading.rs
crates/.template/: Cargo.toml
crates/.template/src/: lib.rs
crates/app/: Cargo.toml  README.md
crates/bevy-test-harness/: Cargo.toml  README.md
crates/cam/: Cargo.toml
crates/cam/src/: flycam.rs  lib.rs
crates/cmd_prompt/: CHANGELOG.md  Cargo.toml  README.md
crates/cmd_prompt/assets/: console.env
crates/cmd_prompt/examples/: minimal.rs  styled.rs
crates/cmd_prompt/src/: assets.rs  lib.rs  systems.rs  test_harness.rs
crates/cmd_prompt/src/actions/actions/: basic_input.rs  history.rs
crates/cmd_prompt/src/commands/: events.rs  mod.rs
crates/cmd_prompt/src/commands/commands/: echo.rs  mod.rs  set.rs  show.rs
crates/cmd_prompt/src/ui/: buffer.rs  console.rs  data.rs
crates/cmd_prompt/src/ui/text/: systems.rs
crates/debug/: Cargo.toml
crates/debug/src/: lib.rs
crates/inspector/: Cargo.toml
crates/inspector/src/: cam.rs  lib.rs  state.rs  tabs.rs
crates/inspector/src/components/: cam.rs  mod.rs
crates/inspector/src/gizmos/: mod.rs  player_cam.rs
crates/inspector/src/inspector_cam/: bundle.rs  mod.rs
crates/inspector/src/state/: inspector_state.rs  ui_state.rs
crates/inspector/src/tabs/: assets.rs  game_view.rs  inspector.rs  mod.rs  resources.rs
crates/meshopt/: Cargo.toml  README.md  build.rs
crates/meshopt/src/: analyze.rs  clusterize.rs  encoding.rs  error.rs  ffi.rs  lib.rs  optimize.rs  packing.rs  remap.rs  shadow.rs  simplify.rs  stripify.rs  utilities.rs
crates/player/: Cargo.toml
crates/player/src/: cam.rs  lib.rs
crates/player/src/cam/: bundle.rs  driver.rs  mod.rs
crates/player/src/controls/: mod.rs
crates/player/src/player/: bundle.rs  mod.rs
crates/screens/: CHANGELOG.md  Cargo.toml  README.md
crates/screens/macros/: Cargo.toml
crates/screens/macros/src/: lib.rs
crates/screens/src/: data.rs  lib.rs  plugin.rs  scope.rs  systems.rs  trait_impl.rs
crates/screens/tests/: tests.rs
crates/screens/tests/screen_tests/: entity_scoping.rs
crates/screens/tests/screens/: empty.rs  entity_scope.rs  lifecycle.rs  load_strategy.rs  mod.rs
crates/tasks/: Cargo.toml
crates/template/: CHANGELOG.md  Cargo.toml  README.md
crates/template/.config/: mise.toml
crates/template/.github/workflows/: ci.yaml
crates/template/src/: lib.rs  plugin.rs
crates/template/src/screen/: mod.rs  util.rs
crates/template/src/screen/dev/camera_test/: mod.rs  screen.rs
crates/template/src/screen/splash/: mod.rs  systems.rs
crates/template/src/screen/world/: screen.rs  state.rs  systems.rs
crates/test_harness/: CHANGELOG.md  Cargo.toml  README.md
crates/test_harness/src/: app_ext.rs  commands_ext.rs  lib.rs
crates/tools/: Cargo.toml
crates/worldgen/: Cargo.toml
crates/worldgen/src/: chunk.rs  chunk_test.rs  expr.rs  generator.rs  lib.rs  main.rs  mesh.rs  util.rs
libs/player/: Cargo.toml
libs/player/src/: lib.rs  services.rs
libs/player/src/cam/: bundle.rs  driver.rs  mod.rs
libs/player/src/controls/: mod.rs
libs/player/src/player/: bundle.rs  mod.rs
libs/service/: Cargo.toml  README.md
libs/service/macros/: Cargo.toml
libs/service/macros/src/: lib.rs
libs/service/macros/tests/: tests.rs
libs/service/src/: app.rs  data.rs  helpers.rs  lib.rs  lifecycle.rs  service.rs  service_macro.rs  spec.rs
libs/service/src/graph/: mod.rs  tarjan.rs
libs/service/src/lifecycle/: commands.rs  data.rs  events.rs  hooks.rs  mod.rs  run_conditions.rs
libs/service/src/lifecycle/commands/: helpers.rs
libs/service/tests/: basic.rs  deps.rs
libs/tasks/: Cargo.toml
libs/tasks/src/: lib.rs
libs/utils/: Cargo.toml
libs/utils/src/: boolish.rs  components.rs  deps.rs  lib.rs  service.rs  text.rs
libs/worldgen/: Cargo.toml
libs/worldgen/src/: chunk.rs  chunk_test.rs  expr.rs  generator.rs  lib.rs  mesh.rs  util.rs
scripts/: cargo-chk  cargo-ci  cargo-setup  cargo-setup.py  cargo-wsl  cargo-wsl-old.sh  ci.py  common.py  headers.py  headers.sh  setup.py  setup.sh  ssh.sh  win.sh  wsl.py  wsl.sh
src/: inspector.rs  main.rs
src/lib/test/: Cargo.toml  README.md
src/lib/test/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs  worldgen.rs
(+87 files in other folders)
