#          вЂў
#  в”Џв”“в”Џв”“в”Џв”“в”Џв”“в”“
#  в”—в”«в”Јв”›в”› в”—в”›в”ѓ
# --в”—в”›-----в”›------------------------------------------ (c) 2025 contributors ---

## Package ####################################################################
[package]
name = "qproj"
version = "0.1.0"
publish = false
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"

# see https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/
[package.metadata.bevy_lint]
panicking_methods = "deny"
pedantic = "warn"

## Profiles ###################################################################
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

## Workspace ##################################################################
[workspace]
members = ["crates/*", "tests"]

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }
clippy.too_many_arguments = "allow"
clippy.type_complexity = "allow"
clippy.nonstandard_macro_braces = "warn"

[workspace.dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_log",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "x11",
] }
bevy_kira_audio = { version = "0.23.0" }

tiny_bail = "0.4.3"
meshopt = "0.4.1"
blake3 = { version = "1.5", features = ["pure"] }
rand = { version = "0.8.3" }
itertools = "0.14.0"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
noise_gui = { git = "https://github.com/ada-x64/noise_gui.git", branch = "quell", package = "noise_expr" }
derive_more = { version = "2.0", features = ["from"] }
anyhow = "1.0.97"
thiserror = "2.0.12"
bevy-inspector-egui = "0.31"
avian3d = "0.3"
# TODO: Update this when the patch is merged.
bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly.git", branch = "bevy_0.16" }
derive_builder = "0.20.2"
easy-ext = "1.0.2"

## crates in the workspace ####################################################
q_worldgen = { path = "crates/worldgen" }
q_player = { path = "crates/player" }
q_inspector = { path = "crates/inspector" }
q_utils = { path = "crates/utils" }

## Main Crate #################################################################
[lints]
workspace = true

[features]
dev = ["bevy/dynamic_linking"]
inspector = ["q_inspector", "q_worldgen/inspector", "avian3d/serialize"]

[dependencies]
# general deps
bevy = { workspace = true }
bevy_kira_audio = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
avian3d = { workspace = true }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
blake3 = { workspace = true }

# local deps
q_inspector = { workspace = true, optional = true }
q_worldgen = { workspace = true }
q_player = { workspace = true }
