#  𝒒𝒑𝒓𝒐𝒋 -- copyright (c) the contributors
#  SPDX-License-Identifier: MIT OR Apache-2.0


## Workspace ##################################################################
[workspace]
members = ["src/bin/*", "src/lib/*"]
resolver = "2"

[workspace.metadata.bevy_lint]
panicking_methods = { level = "warn" }

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }
clippy.too_many_arguments = "allow"
clippy.type_complexity = "allow"
clippy.nonstandard_macro_braces = "warn"

[workspace.dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_log",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "x11",
] }
bevy_kira_audio = { version = "0.23.0" }

tiny_bail = "0.4.3"
meshopt = "0.4.1"
blake3 = { version = "1.5", features = ["pure"] }
rand = { version = "0.8.3" }
itertools = "0.14.0"
thiserror = "2.0.12"
bevy-inspector-egui = "0.31"
avian3d = "0.3"
# TODO: Update this when the patch is merged.
bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly.git", branch = "bevy_0.16" }
derive_builder = "0.20.2"

## crates in the workspace ####################################################

## lib
q_worldgen = { path = "src/lib/worldgen" }
q_player = { path = "src/lib/player" }
q_utils = { path = "src/lib/utils" }
q_tasks = { path = "src/lib/tasks" }
q_test = { path = "src/lib/test" }

## crates
q_service = { path = "submodules/q_service" }

## bin
q_inspector = { path = "src/bin/inspector" }
q_app = { path = "src/bin/app" }

## Profiles ###################################################################
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true
