[package]
name = "integration"
version = "0.1.0"
edition = "2024"

[dependencies]
# nonlocal
bevy = { workspace = true }
wgpu = "24.0.1"             # keep in sync with bevy

# local crates
q_inspector = { workspace = true }
q_worldgen = { workspace = true }
q_player = { workspace = true }


[lints]
workspace = true
