#  𝒒𝒑𝒓𝒐𝒋-- copyright (c) the contributors
#  SPDX-License-Identifier: MIT OR Apache-2.0


[package]
name = "q_app"
version = "0.1.0"
publish = false
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"

[package.metadata.bevy_lint]
panicking_methods = "deny"
pedantic = "warn"

[lints]
workspace = true

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
# general deps
bevy = { workspace = true }
bevy_kira_audio = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
avian3d = { workspace = true }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
blake3 = { workspace = true }

# local deps
q_worldgen = { workspace = true }
q_player = { workspace = true }
q_tasks = { workspace = true }
