#          •
#  ┏┓┏┓┏┓┏┓┓
#  ┗┫┣┛┛ ┗┛┃
# --┗┛-----┛------------------------------------------ (c) 2025 contributors ---
[package]
name = "q_inspector"
version = "0.1.0"
publish = false
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"

[lib]
name = "q_inspector"

[lints]
workspace = true

# see https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/
[package.metadata.bevy_lint]
panicking_methods = "deny"
pedantic = "warn"

[features]
dev = ["bevy/dynamic_linking"]
debug = []

[dependencies]
# workspace
q_utils = { workspace = true }
q_player = { workspace = true }
q_tasks = { workspace = true }
q_worldgen = { workspace = true }
q_app = { workspace = true }

# others
bevy = { workspace = true, features = ["bevy_dev_tools"] }
bevy-inspector-egui = { workspace = true }
bevy_dolly = { workspace = true }
tiny_bail = { workspace = true }
egui = "0.31"
bevy_egui = "0.34.0"
egui_dock = "0.16.0"
rfd = "0.15.3"
egui-notify = "0.19.0"
derivative = "2.2.0"
