#          •
#  ┏┓┏┓┏┓┏┓┓
#  ┗┫┣┛┛ ┗┛┃
# --┗┛-----┛------------------------------------------ (c) 2025 contributors ---
[package]
name = "q_inspector"
version = "0.1.0"
publish = false
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"

[features]
dev = ["bevy/dynamic_linking"]
debug = []

[dependencies]
bevy = { workspace = true, features = ["bevy_dev_tools"] }
log = { workspace = true }
bevy-inspector-egui = { workspace = true }
avian3d = { workspace = true }
bevy_dolly = { workspace = true }
# bevy-inspector-egui uses egui v0.30
bevy_egui = "0.32.0"
egui_dock = "0.15.0"
