#          •
#  ┏┓┏┓┏┓┏┓┓
#  ┗┫┣┛┛ ┗┛┃
# --┗┛-----┛------------------------------------------ (c) 2025 contributors ---
[package]
name = "q_inspector"
version = "0.1.0"
publish = false
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"

[lints]
workspace = true

# see https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/
[package.metadata.bevy_lint]
panicking_methods = "deny"
pedantic = "warn"

[features]
dev = ["bevy/dynamic_linking"]
debug = []

[dependencies]
bevy = { workspace = true, features = ["bevy_dev_tools"] }
log = { workspace = true }
bevy-inspector-egui = { workspace = true }
avian3d = { workspace = true }
bevy_dolly = { workspace = true }
easy-ext = { workspace = true }
egui = "0.31"
bevy_egui = "0.34.0"
egui_dock = "0.16.0"

q_utils = { workspace = true }
q_player = { workspace = true }
