#          •
#  ┏┓┏┓┏┓┏┓┓
#  ┗┫┣┛┛ ┗┛┃
# --┗┛-----┛------------------------------------------ (c) 2025 contributors ---
[package]
name = "meshopt"
version = "0.1.0"
publish = false
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"

[lints.rust]
non_camel_case_types = "allow"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }
derivative = { workspace = true }
thiserror = { workspace = true }
float-cmp = "0.10"
bitflags = "2.4"

[build-dependencies]
bindgen = { version = "0.71", features = ["experimental"] }
cc = "1.2.17"
