#          •
#  ┏┓┏┓┏┓┏┓┓
#  ┗┫┣┛┛ ┗┛┃
# --┗┛-----┛------------------------------------------ (c) 2025 contributors ---
[package]
name = "q_player"
version = "0.1.0"
publish = false
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"

[features]
debug = ["q_debug"]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
rand = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde_json = "1.0.138"
anyhow = { workspace = true }
derivative = { workspace = true }
thiserror = { workspace = true }
avian3d = { workspace = true }
bevy-tnua-avian3d = "0.3.1"
bevy-tnua = "0.22"

q_worldgen = { workspace = true }
q_debug = { workspace = true, optional = true }
