#          •
#  ┏┓┏┓┏┓┏┓┓
#  ┗┫┣┛┛ ┗┛┃
# --┗┛-----┛------------------------------------------ (c) 2025 contributors ---
[package]
name = "q_player"
version = "0.1.0"
publish = false
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
avian3d = { workspace = true }
bevy-tnua-avian3d = "0.5"
bevy-tnua = "0.24"
bevy_dolly = { workspace = true }
derive_builder = { workspace = true }
easy-ext = { workspace = true }

q_worldgen = { workspace = true }
q_utils = { workspace = true }
