[package]
name = "q_screens"
version = "0.1.0"
edition = "2024"

[dependencies]
# bevy
bevy = {version="0.18"} # features=["default_app", "default_platform", "common_api"]}

# not bevy
tiny_bail = "0.7"
itertools = "0.14.0"
thiserror = "2.0.12"
bitflags = "2.9.3"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
strum = { version = "0.27.2", features = ["derive"] }
variadics_please = "1.1.0"

# local
q_test_harness = {path="../test_harness", version="0.1.0"}
q_screens_derive = {path="./macros", version="0.1.0"}

[dev-dependencies]
# just for a few inspector things... should really fork them
bevy-inspector-egui = "0.36"
bevy_asset_loader = "0.25"

[lints]
workspace = true
