[package]
name = "tools" 
version = "0.1.0"
publish = false
authors = ["<phoenix.mandala@pm.me>"] 
edition = "2021"

[features]
dev = ["bevy/dynamic_linking"]
debug = []

[[bin]]
name="terrain-editor"

[dependencies]
bevy = {workspace = true}
serde = { version = "1.0.217", features = ["derive"] }
rand = {workspace = true}
itertools = {workspace = true}
log = {workspace = true}
debug_gizmos = {workspace = true, optional = true}

bevy_egui = "0.33"
egui_node_graph2 = "0.7"

# MSVC
#https://bevy-cheatbook.github.io/setup/cross/linux-windows.html#bevy-caveats
[target.'cfg(target_env="msvc")'.dependencies]
blake3 = {workspace = true}