[package]
name = "worldgen" 
version = "0.1.0"
publish = false
authors = ["<phoenix.mandala@pm.me>"] 
edition = "2021"

[features]
# just to silence the warning
debug = ["debug_gizmos"]
dev = ["bevy/dynamic_linking"]
inspector = ["bevy-inspector-egui"]

[dependencies]
bevy = {workspace = true}
serde = { version = "1.0.217", features = ["derive"] }
rand = {workspace = true}
itertools = {workspace = true}
log = {workspace = true}
serde_json = "1.0.138"
debug_gizmos = {workspace = true, optional = true}
rayon= {workspace = true}
noise_gui = {workspace = true}
noise = "0.8.2" #keep in sync with noise_gui
ron = "0.8.1"
anyhow = {workspace = true}
derivative = {workspace = true}
thiserror = {workspace = true}
meshopt = "0.4.1"
bevy-inspector-egui = {workspace = true, optional = true}