#          •
#  ┏┓┏┓┏┓┏┓┓
#  ┗┫┣┛┛ ┗┛┃
# --┗┛-----┛------------------------------------------ (c) 2025 contributors ---
[package]
name = "q_worldgen"
version = "0.1.0"
publish = false
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"

[features]
# just to silence the warning
debug = ["q_debug"]
dev = ["bevy/dynamic_linking"]
inspector = ["bevy-inspector-egui"]

[dependencies]
bevy = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
rand = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde_json = "1.0.138"
rayon = { workspace = true }
noise_gui = { workspace = true }
noise = "0.8.2"                                             #keep in sync with noise_gui
ron = "0.8.1"
anyhow = { workspace = true }
derivative = { workspace = true }
thiserror = { workspace = true }
meshopt = { workspace = true }
bevy-inspector-egui = { workspace = true, optional = true }
avian3d = { workspace = true }

q_debug = { workspace = true, optional = true }
