#  𝒒𝒑𝒓𝒐𝒋-- copyright (c) the contributors
#  SPDX-License-Identifier: MIT OR Apache-2.0


[package]
name = "q_player"
version = "0.1.0"
publish = false
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"

[lints]
workspace = true

# see https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/
[package.metadata.bevy_lint]
panicking_methods = "deny"
pedantic = "warn"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
avian3d = { workspace = true }
bevy-tnua-avian3d = "0.5"
bevy-tnua = "0.24"
bevy_dolly = { workspace = true }
derive_builder = { workspace = true }

q_worldgen = { workspace = true }
q_utils = { workspace = true }
