[package]
name = "q_service"
version = "0.1.0"
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"

[features]
derive = ["dep:q_service_macros"]

[dependencies]
# keep these up-to-date
tracing = { version = "0.1", default-features = false }
bevy_ecs = "0.16.1"
bevy_platform = "0.16.1"
bevy_app = "0.16.1"
bevy_derive = "0.16.1"

# local
q_service_macros = { path = "./macros/", optional = true }

# other
derivative = "2.2.0"
indexmap = "2.10.0"
paste = "1.0.15"
slotmap = "1.0.7"
smallvec = "1.15.1"
thiserror = "2.0.12"

[dev-dependencies]
bevy = "0.16.1"
