#  𝒒𝒑𝒓𝒐𝒋-- copyright (c) the contributors
#  SPDX-License-Identifier: MIT OR Apache-2.0


[package]
name = "q_worldgen"
version = "0.1.0"
publish = false
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"

[lints]
workspace = true

# see https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/
[package.metadata.bevy_lint]
panicking_methods = "deny"
pedantic = "warn"

[features]
dev = ["bevy/dynamic_linking"]
inspector = ["bevy-inspector-egui", "avian3d/serialize"]

[dependencies]
bevy = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
rand = { workspace = true }
itertools = { workspace = true }
noise_gui = { git = "https://github.com/ada-x64/noise_gui.git", branch = "quell", package = "noise_expr" }
noise = "0.8.2"                                                                                            #keep in sync with noise_gui
ron = "0.8.1"
thiserror = { workspace = true }
meshopt = { workspace = true }
bevy-inspector-egui = { workspace = true, optional = true }
avian3d = { workspace = true }
wgpu = "24.0.3"                                                                                            # keep in sync with bevy
tiny_bail = { workspace = true }
