#  𝒒𝒑𝒓𝒐𝒋 -- copyright (c) the contributors
#  SPDX-License-Identifier: MIT OR Apache-2.0


[package]
name = "q_test"
version = "0.1.0"
edition = "2024"
description = "A headless test runner for Bevy."

[dependencies]
# nonlocal
bevy = { workspace = true, features = ["bevy_ci_testing"] }
wgpu = "24.0.1"                                             # keep in sync with bevy

[lints]
workspace = true

[features]
log = []
default = ["log"]
